# DocSpace

./: .gitignore  .gitmodules  BUILD.bazel  DEPLOY_CUSTOM_IMAGE.md  DOCKER_BUILD.md  Dockerfile.quick  MCP_SERVER_SETUP.md  MODULE.bazel  README-DEV.md  Tiltfile  UGOTOFFICE_CUSTOMIZATION.md  paket.dependencies  publish
paket.bazel_deps/: paket.main.bzl
